--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <a href = "https://www.youtube.com/" target = "_blank" title = "link to youtube">
 
-        <img src="/Images/youtube.png" alt = "youtube icon">
+        <img src="/youtube.png" alt = "youtube icon">
 
     </a>
 
